Changed some text

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
       <p class="muted">This is a <strong>fictional e-commerce demo</strong> built for a developer portfolio. No products are real, and no transactions occur.</p>
     </main>
 
-    <footer class="site-footer"><p>© <span id="year"></span> Alien Arsenal — A fictional demo by You.</p></footer>
+    <footer class="site-footer"><p>© <span id="year"></span> Alien Arsenal — A fictional demo by Ethan L.</p></footer>
     <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
     <script src="app.js"></script>
   </body>
