--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </main>
 
     <footer class="site-footer">
-      <p>© <span id="year"></span> Alien Arsenal — A fictional demo by You.</p>
+      <p>© <span id="year"></span> Alien Arsenal — A fictional demo by Ethan L.</p>
     </footer>
 
     <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
