--- a/product-reality-splitter.html
+++ b/product-reality-splitter.html
@@ -41,7 +41,7 @@
     </div>
   </main>
 
-  <footer class="site-footer"><p>© <span id="year"></span> Alien Arsenal — A fictional demo by You.</p></footer>
+  <footer class="site-footer"><p>© <span id="year"></span> Alien Arsenal — A fictional demo by Ethan L.</p></footer>
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
   <script src="app.js"></script>
 </body>
