--- a/checkout.html
+++ b/checkout.html
@@ -66,7 +66,7 @@
       </section>
     </main>
 
-    <footer class="site-footer"><p>© <span id="year"></span> Alien Arsenal — A fictional demo by You.</p></footer>
+    <footer class="site-footer"><p>© <span id="year"></span> Alien Arsenal — A fictional demo by Ethan L.</p></footer>
     <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
     <script src="app.js"></script>
   </body>
